[project]
name = "comfyui-group-selection"
description = "Create a new group of nodes."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-group-selection"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-group-selection"
Icon = ""
